# cuda-sparks

./: .gitignore  CMakeLists.txt  README.md  build.bat
docs/: ARCHITECTURE.md  MATH.md  cuda_reference.md
include/: cuda_utils.h  particles.h
phases/phase1_cpu_baseline/: CMakeLists.txt  README.md
phases/phase1_cpu_baseline/src/: main.cpp  particle_system.h  renderer.cpp  renderer.h
phases/phase2_cuda_migration/: CMakeLists.txt  README.md
phases/phase2_cuda_migration/src/: main.cpp  particle_system.cu  particle_system.h  renderer.cpp
phases/phase3_effects/: CMakeLists.txt  README.md
phases/phase3_effects/src/: main.cpp  particle_system.cu  particle_system.h  renderer.h
phases/phase4_one_million/: AUDIO.md  CMakeLists.txt  PRESENTATION.md  README.md
phases/phase4_one_million/assets/fonts/: NOTICE.md
phases/phase4_one_million/src/: audio.cpp  audio.h  hud_log.h  main.cpp  particle_system.cu  particle_system.h  renderer.cpp  renderer.h
